fix profile shifting issue and update app test

--- a/client/src/components/pages/Profile.css
+++ b/client/src/components/pages/Profile.css
@@ -100,7 +100,8 @@ main {
 .edit-container {
   display: flex;
   flex-direction: row;
-  align-items: flex-start
+  align-items: flex-start;
+  width: 100%;
 }
 
 .form-section {
